New development version. Some extra logging to track down windows issue (when deployed, fine in Eclipse)